# niuniu

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
docs/: model_document.md
examples/: compare_arrival_times.py  predict_single_customer.py  synthetic_demo.py
model/: model_v1.md  model_v2.md
notebooks/: exploratory_simulation.ipynb
src/queue_model/: __init__.py  distributions.py  plotting.py  prediction.py  simulation.py  survival.py  utils.py
tests/: test_distributions.py  test_prediction.py  test_simulation.py
